Fixed alignment issues with calendar and panel

--- a/frontend/src/components/styles/SidePanel.css
+++ b/frontend/src/components/styles/SidePanel.css
@@ -1,4 +1,5 @@
 .SidePanelContainer{
+    
     width: 25em;
     background-color:white;
     border: 2px solid #a0a096;
@@ -6,6 +7,8 @@
     max-width: 100%;
     align-self: center;
     height: 19em;
+    margin-bottom: 1em;
+    box-sizing: border-box;
     /* why is this not aligning with the calendar :/ */
 }
 
